# JuniorTestTask

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/repository/: repository_lcresponse.py
app/routes/: __init__.py  lcresponse.py
app/schemas/: lc_response.py
