[tool.poetry]
name = "juniortesttask"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
langchain = {extras = ["hub"], version = "^0.2.5"}
langchain-community = "^0.2.5"
pydantic-settings = "^2.3.3"
huggingface-hub = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
